Fix Toggle Button COlor and Spacing

--- a/new-tab/css/styles.scss
+++ b/new-tab/css/styles.scss
@@ -64,11 +64,11 @@ main {
 #Toggle {
   width: 4.4rem;
   height: 2.4rem;
-  border: 2px solid currentColor;
+  border: 3px solid;
   border-radius: 999px;
   position: absolute;
-  top: 1rem;
-  right: 4rem;
+  top: 1.5rem;
+  right: 3.75rem;
   display: flex;
   align-items: center;
   padding: 0.2rem;
@@ -90,18 +90,23 @@ main {
     .sun {
       position: absolute;
       right: 0;
-      fill: #161b22;
-      stroke: #161b22;
+      fill: $orange !important;
+      stroke: $orange !important;
     }
     .moon {
       position: absolute;
       left: 0;
-      fill: #fafafa;
-      stroke: #fafafa;
+      fill: $blue !important;
+      stroke: $blue !important;
     }
   }
 }
-
+.light {
+  border-color: $orange !important;
+}
+.dark {
+  border-color: $blue !important;
+}
 /*
  * Coloring Borders
 */
